# asteroid

./: .gitignore  README.md  pyproject.toml
configs/: darkroom-easy.yaml  darkroom-hard.yaml  keydoor-markovian.yaml  keydoor-nonmarkovian.yaml  navigation-episodic.yaml  navigation-nonepisodic.yaml
datasets/: __init__.py  collect_data.py
environments/: __init__.py  base_env.py  create_envs.py  darkroom_env.py  keydoor_env.py  navigation_env.py  procgen_env.py  rollout_policy.py
experiments/: __init__.py  config.py  eval_policy.py  eval_procgen_dpt.py  eval_procgen_expert.py  train_aawr.py  train_asteroid.py  train_asteroid_procgen.py  train_dpt.py  train_procgen_bc_ppo.py  train_rl2.py
models/: __init__.py  model.py
scripts/: plot_procgen_sample_efficiency.py  plot_procgen_visitation_heatmaps.py  run_baselines.sh  run_procgen.sh  train_asteroid.sh
